[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ActionBar.gd" id="1"]

[node name="ActionBar" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8
script = ExtResource("1")

[node name="InventoryButton" type="Button" parent="."]
layout_mode = 2
text = "Inventory"
custom_minimum_size = Vector2(0, 40)

[node name="SkillsButton" type="Button" parent="."]
layout_mode = 2
text = "Skills"
custom_minimum_size = Vector2(0, 40)

[node name="SaveExitButton" type="Button" parent="."]
layout_mode = 2
text = "Save & Exit"
custom_minimum_size = Vector2(0, 40)

